feat: Добавлен обработчик для рядов карточек на всём сайте

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-            <section class = "cards-section"> 
+            <section class = "cards-section" id = "DATABANK | Andor"> 
 
                 <button class = "scroll-back-button"></button>
 
@@ -146,6 +146,133 @@
 
                 </div>
                 <button class = "scroll-forward-button"></button>
+            </section>
+
+
+
+
+
+            <section class = "cards-section" id = "Databank | Roque One: A Star Wars Story">
+
+                <button class = "scroll-back-button"></button>
+
+                <header class = "cards-section-header">
+                    <h2 class = "cards-header-name">Databank | Roque One: A Star Wars Story</h2>
+                    <a href = "#" class = "cards-see-all">SEE ALL ></a>
+                </header>
+
+                <div class = "cards-row">
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/jyn-erso.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Jyn Erso</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/cassian-andor-roqueone.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Cassian Andor</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/k2so.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>K-2SO</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/director-orson-krennic.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Director Orson Krennic</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/galen-erso.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Galen Erso</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/saw-gerrera.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Saw Gerrera</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/chirrut-imwe.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Chirrut Îmwe</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/baze-malbus.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Baze Malbus</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/bodhi-rook.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Bodhi Rook</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/leia-organa.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Leia Organa</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/tarkin-rogue.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Grand Moff Tarkin</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/darth-vader.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Darth Vader</h3>
+                        </div>
+                    </a>
+
+                    <a class = "card" href = "#">
+                        <img src = "images/cards-databank-roque-one/death-star.jpeg">
+                        <div class = "card-description">
+                            <div class = "indicator"></div>
+                            <h3>Death Star</h3>
+                        </div>
+                    </a>
+                    
+
+
+
+                    <button class = "scroll-forward-button"></button>
+                </div>
+
             </section>
 
             
